infra/k8s/services/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: microblog.com
      http:
        paths:
          - path: /posts/create
            backend:
              serviceName: posts-clusterip-srv
              servicePort: 3001
          - path: /posts
            backend:
              serviceName: queries-clusterip-srv
              servicePort: 3003
          - path: /posts/?(.*)/comments
            backend:
              serviceName: comments-clusterip-srv
              servicePort: 3002
          - path: /?(.*)
            backend:
              serviceName: frontend-clusterip-srv
              servicePort: 3000
